output to base64

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <script language="javascript" src="../jsinc/ck-inc/debug.js"></script>
 <script language="javascript" src="../jsinc/jquery/jquery-3.2.1.min.js"></script>
 <script language="javascript" src="../jsinc/jquery-ui/jquery-ui.min.js"></script>
-<script language="javascript" src="../jsinc/base64/base64.js"></script>
+<script language="javascript" src="../jsinc/jsbn/jsbn.js"></script>
+<script language="javascript" src="../jsinc/jsbn/jsbn2.js"></script>
+<script language="javascript" src="../jsinc/jsbn/base64.js"></script>
 <script language="javascript" src="js/catypes.js"></script>
 <script language="javascript" src="js/carule.js"></script>
 <script language="javascript" src="js/caimporter.js"></script>
