putting together a widget framework

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <script language="javascript" src="js/carule.js"></script>
 <script language="javascript" src="js/caimporter.js"></script>
 <script language="javascript" src="js/widgets/camachine.js"></script>
+<script language="javascript" src="js/widgets/cacontrols.js"></script>
+<script language="javascript" src="js/widgets/cacanvas.js"></script>
 <div id="machine"></div>
 
 <script language="javascript">
