--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <h2>Cellular Automata JS</h2>
-<script language="javascript" src="../jsinc/ck-inc/common.js"></script>
-<script language="javascript" src="../jsinc/ck-inc/debug.js"></script>
-<script language="javascript" src="../jsinc/jquery/jquery-3.2.1.min.js"></script>
-<script language="javascript" src="../jsinc/jquery-ui/jquery-ui.min.js"></script>
+<script type="text/javascript" src="../jsinc/ck-inc/common.js"></script>
+<script type="text/javascript" src="../jsinc/ck-inc/debug.js"></script>
+<script type="text/javascript" src="../jsinc/jquery/jquery-3.2.1.min.js"></script>
+<script type="text/javascript" src="../jsinc/jquery-ui/jquery-ui.min.js"></script>
+<script type="text/javascript" src="../jsinc/jquery-spinner/g-spinner.min.js"></script>
+<script type="text/javascript" src="../jsinc/jquery-cookie/jquery.cookie.js"></script>
+<link rel="stylesheet" href="../jsinc/jquery-spinner/css/gspinner.min.css">
+<link rel="stylesheet" href="css/CA.css">
+<link rel="stylesheet" href="css/jquery/jquery-ui.css">
+
+
 <script language="javascript" src="../jsinc/ck-inc/converter.js"></script>
 <script language="javascript" src="js/catypes.js"></script>
 <script language="javascript" src="js/carule.js"></script>
