moved CA specific files

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 
 <script language="javascript" src="../jsinc/ck-inc/converter.js"></script>
-<script language="javascript" src="js/catypes.js"></script>
-<script language="javascript" src="js/carule.js"></script>
-<script language="javascript" src="js/caimporter.js"></script>
+<script language="javascript" src="js/CA/catypes.js"></script>
+<script language="javascript" src="js/CA/carule.js"></script>
+<script language="javascript" src="js/CA/caimporter.js"></script>
 <script language="javascript" src="js/widgets/camachine.js"></script>
 <script language="javascript" src="js/widgets/cacontrols.js"></script>
 <script language="javascript" src="js/widgets/cacanvas.js"></script>
