--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <script language="javascript" src="../jsinc/ck-inc/converter.js"></script>
 <script language="javascript" src="js/CA/catypes.js"></script>
 <script language="javascript" src="js/CA/carule.js"></script>
+<script language="javascript" src="js/CA/cagrid.js"></script>
 <script language="javascript" src="js/CA/caimporter.js"></script>
 <script language="javascript" src="js/widgets/camachine.js"></script>
 <script language="javascript" src="js/widgets/cacontrols.js"></script>
