added drawing grid

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<title>Cellular Automata explorer</title>
 	<script type="text/javascript" src="../jsinc/ck-inc/common.js"></script>
 	<script type="text/javascript" src="../jsinc/ck-inc/debug.js"></script>
+	<script type="text/javascript" src="../jsinc/bean/bean.js"></script>
 	<script type="text/javascript" src="../jsinc/jquery/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="../jsinc/jquery-ui/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="../jsinc/jquery-spinner/g-spinner.min.js"></script>
@@ -15,6 +16,7 @@
 
 	<script language="javascript" src="../jsinc/ck-inc/converter.js"></script>
 	<script language="javascript" src="js/CA/catypes.js"></script>
+	<script language="javascript" src="js/CA/cacell.js"></script>
 	<script language="javascript" src="js/CA/carule.js"></script>
 	<script language="javascript" src="js/CA/cagrid.js"></script>
 	<script language="javascript" src="js/CA/caimporter.js"></script>
