added string repeater

--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
 	$(onJqueryLoad);
 	</script>
 
-	<div>
-	see <a href="https://drive.google.com/open?id=1VGfGFFW91kYUms18tDa2nSgQAkdL1iEt42uDivZReGE" target="_new">this document</a>
-	</div>
+	<ul>
+	<li>for documentatiion see <a href="https://drive.google.com/open?id=1VGfGFFW91kYUms18tDa2nSgQAkdL1iEt42uDivZReGE" target="_new">this document</a>
+	<li>we're on <a href="https://github.com/open768/CA">Github</a>
+	</ul>
 </body>
 </html>
