--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 	<script language="javascript">
 	function onJqueryLoad(){
 		$("#machine").camachine();
+		$( document ).tooltip();
 	}
 	$(onJqueryLoad);
 	</script>
