--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	<script language="javascript" src="js/CA/carule.js"></script>
 	<script language="javascript" src="js/CA/cagrid.js"></script>
 	<script language="javascript" src="js/CA/caimporter.js"></script>
+	<script language="javascript" src="js/CA/calexicon.js"></script>
 	<script language="javascript" src="js/widgets/camachine.js"></script>
 	<script language="javascript" src="js/widgets/cacontrols.js"></script>
 	<script language="javascript" src="js/widgets/cacanvas.js"></script>
@@ -31,7 +32,6 @@
 	<script language="javascript">
 	function onJqueryLoad(){
 		$("#machine").camachine();
-		$( document ).tooltip();
 	}
 	$(onJqueryLoad);
 	</script>
