added more rules

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 	<ul>
 	<li>for documentatiion see <a href="https://drive.google.com/open?id=1VGfGFFW91kYUms18tDa2nSgQAkdL1iEt42uDivZReGE" target="_new">this document</a>
 	<li>we're on <a href="https://github.com/open768/CA">Github</a>
+	<li>for more CA rules see <a target="mcell" href="http://psoup.math.wisc.edu/mcell/ca_rules.html">http://psoup.math.wisc.edu/mcell/ca_rules.html</a>
 	</ul>
 </body>
 </html>
