--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 	<script language="javascript" src="js/widgets/camachine.js"></script>
 	<script language="javascript" src="js/widgets/cacontrols.js"></script>
 	<script language="javascript" src="js/widgets/cacanvas.js"></script>
+	<script language="javascript" src="js/widgets/castatus.js"></script>
 </head>
 <body>
 	<h2>Cellular Automata JS</h2>
