--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" href="../jsinc/jquery-spinner/css/gspinner.min.css">
 	<link rel="stylesheet" href="css/CA.css">
 	<link rel="stylesheet" href="css/jquery/jquery-ui.css">
-
+	<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 
 	<script language="javascript" src="../jsinc/ck-inc/converter.js"></script>
 	<script language="javascript" src="js/CA/catypes.js"></script>
@@ -21,13 +21,24 @@
 	<script language="javascript" src="js/CA/cagrid.js"></script>
 	<script language="javascript" src="js/CA/caimporter.js"></script>
 	<script language="javascript" src="js/CA/calexicon.js"></script>
+	<script language="javascript" src="js/widgets/cachart.js"></script>
 	<script language="javascript" src="js/widgets/camachine.js"></script>
 	<script language="javascript" src="js/widgets/cacontrols.js"></script>
 	<script language="javascript" src="js/widgets/cacanvas.js"></script>
 	<script language="javascript" src="js/widgets/castatus.js"></script>
 </head>
 <body>
-	<h2>Cellular Automata JS</h2>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-51550338-3"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-51550338-3');
+	</script>
+
+	
 	<div id="machine"></div>
 
 	<script language="javascript">
