--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 	<script language="javascript">
 	function onJqueryLoad(){
-		$("#machine").camachine();
+		$("#machine").camachine({no_graphs:false});
 	}
 	$(onJqueryLoad);
 	</script>
