added clipboard reading

--- a/editor.html
+++ b/editor.html
@@ -1,15 +1,16 @@
+<!DOCTYPE html>
 <html>
 <head>
 	<title>Cellular Automata explorer - editor</title>
 	<script type="text/javascript" src="../jsinc/ck-inc/common.js"></script>
 	<script type="text/javascript" src="../jsinc/ck-inc/debug.js"></script>
-	<script type="text/javascript" src="../jsinc/bean/bean.js"></script>
-	<script type="text/javascript" src="../jsinc/jquery/jquery-3.2.1.min.js"></script>
-	<script type="text/javascript" src="../jsinc/jquery-ui/jquery-ui.min.js"></script>
-	<script type="text/javascript" src="../jsinc/jquery-spinner/g-spinner.min.js"></script>
-	<script type="text/javascript" src="../jsinc/jquery-cookie/jquery.cookie.js"></script>
-	<script type="text/javascript" src="../jsinc/jquery-canvas/jcanvas.min.js"></script>
-	<link rel="stylesheet" href="../jsinc/jquery-spinner/css/gspinner.min.css">
+	<script type="text/javascript" src="../jsinc/extra/bean/bean.js"></script>
+	<script type="text/javascript" src="../jsinc/extra/jquery/jquery-3.2.1.min.js"></script>
+	<script type="text/javascript" src="../jsinc/extra/jquery-ui/jquery-ui.min.js"></script>
+	<script type="text/javascript" src="../jsinc/extra/jquery-spinner/g-spinner.min.js"></script>
+	<script type="text/javascript" src="../jsinc/extra/jquery-cookie/jquery.cookie.js"></script>
+	<script type="text/javascript" src="../jsinc/extra/jquery-canvas/jcanvas.min.js"></script>
+	<link rel="stylesheet" href="../jsinc/extra/jquery-spinner/css/gspinner.min.css">
 	<link rel="stylesheet" href="css/CA.css">
 	<link rel="stylesheet" href="css/jquery/jquery-ui.css">
 
