--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 	<ul>
 	<li>for the editor, copy the rule into the clipboard and <a target=editor href="editor.html">Click here</a>
-	<li>for documentation see <a href="https://drive.google.com/open?id=1VGfGFFW91kYUms18tDa2nSgQAkdL1iEt42uDivZReGE" target="_new">this document</a>
+	<li>for documentation see <a href="https://docs.google.com/document/d/1Rw_CsPg5KUKUC3DDpbSPLkvWDMxqy7L_8Z0UfjmEHSg/edit?usp=sharing" target="_new">this document</a>
 	<li>we're on <a href="https://github.com/open768/CA">Github</a>
 	<li>for more CA rules see <a target="mcell" href="http://psoup.math.wisc.edu/mcell/ca_rules.html">http://psoup.math.wisc.edu/mcell/ca_rules.html</a>
 	</ul>
