moved to using bean for events
and uses javascript class keyword

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	</script>
 
 	
-	<div id="machine"></div>
+	<div id="machine">Loading Machine</div>
 
 	<script language="javascript">
 	function onJqueryLoad(){
