move ca code into jsinc

--- a/editor.html
+++ b/editor.html
@@ -16,10 +16,10 @@
 
 
 	<script language="javascript" src="../jsinc/ck-inc/converter.js"></script>
-	<script language="javascript" src="js/CA/catypes.js"></script>
-	<script language="javascript" src="js/CA/cacell.js"></script>
-	<script language="javascript" src="js/CA/carule.js"></script>
-	<script language="javascript" src="js/CA/caimporter.js"></script>
+	<script language="javascript" src="jsinc/CA/catypes.js"></script>
+	<script language="javascript" src="jsinc/CA/cacell.js"></script>
+	<script language="javascript" src="jsinc/CA/carule.js"></script>
+	<script language="javascript" src="jsinc/CA/caimporter.js"></script>
 	<script language="javascript" src="js/widgets/caeditor.js"></script>
 </head>
 <body>
