--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 	<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 
 	<script language="javascript" src="../jsinc/ck-inc/converter.js"></script>
-	<script language="javascript" src="js/CA/catypes.js"></script>
-	<script language="javascript" src="js/CA/cacell.js"></script>
-	<script language="javascript" src="js/CA/carule.js"></script>
-	<script language="javascript" src="js/CA/cagrid.js"></script>
-	<script language="javascript" src="js/CA/caimporter.js"></script>
-	<script language="javascript" src="js/CA/calexicon.js"></script>
+	<script language="javascript" src="jsinc/CA/catypes.js"></script>
+	<script language="javascript" src="jsinc/CA/cacell.js"></script>
+	<script language="javascript" src="jsinc/CA/carule.js"></script>
+	<script language="javascript" src="jsinc/CA/cagrid.js"></script>
+	<script language="javascript" src="jsinc/CA/caimporter.js"></script>
+	<script language="javascript" src="jsinc/CA/calexicon.js"></script>
 	<script language="javascript" src="js/widgets/cachart.js"></script>
 	<script language="javascript" src="js/widgets/camachine.js"></script>
 	<script language="javascript" src="js/widgets/cacontrols.js"></script>
