similar structure for html head

--- a/crypt.html
+++ b/crypt.html
@@ -22,13 +22,13 @@
 	<script src="../jsinc/ck-inc/converter.js"></script>
 
 	<!-- cellular automata classes -->
-	<script language="javascript" src="jsinc/CA/catypes.js"></script>
-	<script language="javascript" src="jsinc/CA/cacell.js"></script>
-	<script language="javascript" src="jsinc/CA/carule.js"></script>
-	<script language="javascript" src="jsinc/CA/caimporter.js"></script>
+	<script src="jsinc/CA/catypes.js"></script>
+	<script src="jsinc/CA/cacell.js"></script>
+	<script src="jsinc/CA/carule.js"></script>
+	<script src="jsinc/CA/caimporter.js"></script>
 	
 	<!-- widgets for page -->
-	<script language="javascript" src="js/widgets/cacrypt.js"></script>
+	<script src="js/widgets/cacrypt.js"></script>
 </head>
 
 <body>
