--- a/editor.html
+++ b/editor.html
@@ -2,31 +2,39 @@
 <html>
 <head>
 	<title>Cellular Automata explorer - editor</title>
-	<script type="text/javascript" src="../jsinc/ck-inc/common.js"></script>
-	<script type="text/javascript" src="../jsinc/ck-inc/debug.js"></script>
-	<script type="text/javascript" src="../jsinc/extra/bean/bean.js"></script>
-	<script type="text/javascript" src="../jsinc/extra/jquery/jquery-3.2.1.min.js"></script>
-	<script type="text/javascript" src="../jsinc/extra/jquery-ui/jquery-ui.min.js"></script>
-	<script type="text/javascript" src="../jsinc/extra/jquery-spinner/g-spinner.min.js"></script>
-	<script type="text/javascript" src="../jsinc/extra/jquery-cookie/jquery.cookie.js"></script>
-	<script type="text/javascript" src="../jsinc/extra/jquery-canvas/jcanvas.min.js"></script>
-	<link rel="stylesheet" href="../jsinc/extra/jquery-spinner/css/gspinner.min.css">
+	<!-- 3rd party libraries (bean) -->
+	<script  src="../jsinc/extra/bean/bean.js"></script>
+	
+	<!-- 3rd party libraries (jquery) -->
+	<script  src="../jsinc/extra/jquery/jquery-3.2.1.min.js"></script>
+	<script  src="../jsinc/extra/jquery-ui/jquery-ui.min.js"></script>
+	<script  src="../jsinc/extra/jquery-cookie/jquery.cookie.js"></script>
+	<script  src="../jsinc/extra/jquery-canvas/jcanvas.min.js"></script>
+	<script  src="https://www.gstatic.com/charts/loader.js"></script>
+	
+	<!-- stylesheets -->
 	<link rel="stylesheet" href="css/CA.css">
 	<link rel="stylesheet" href="css/jquery/jquery-ui.css">
 
+	<!-- my useful functions -->
+	<script src="../jsinc/ck-inc/common.js"></script>
+	<script src="../jsinc/ck-inc/debug.js"></script>
+	<script src="../jsinc/ck-inc/converter.js"></script>
 
-	<script language="javascript" src="../jsinc/ck-inc/converter.js"></script>
-	<script language="javascript" src="jsinc/CA/catypes.js"></script>
-	<script language="javascript" src="jsinc/CA/cacell.js"></script>
-	<script language="javascript" src="jsinc/CA/carule.js"></script>
-	<script language="javascript" src="jsinc/CA/caimporter.js"></script>
-	<script language="javascript" src="js/widgets/caeditor.js"></script>
+	<!-- cellular automata classes -->
+	<script src="jsinc/CA/catypes.js"></script>
+	<script src="jsinc/CA/cacell.js"></script>
+	<script src="jsinc/CA/carule.js"></script>
+	<script src="jsinc/CA/caimporter.js"></script>
+	
+	<!-- widgets for page -->
+	<script src="js/widgets/caeditor.js"></script>
 </head>
 <body>
 	<h2>Cellular Automata JS Editor</h2>
 	<div id="editor"></div>
 
-	<script language="javascript">
+	<script >
 	function onJqueryLoad(){
 		$("#editor").caeditor();
 	}
