--- a/crypt.html
+++ b/crypt.html
@@ -22,10 +22,10 @@
 	<script src="../jsinc/ck-inc/converter.js"></script>
 
 	<!-- cellular automata classes -->
-	<script src="jsinc/CA/catypes.js"></script>
-	<script src="jsinc/CA/cacell.js"></script>
-	<script src="jsinc/CA/carule.js"></script>
-	<script src="jsinc/CA/caimporter.js"></script>
+	<script src="js/CA/catypes.js"></script>
+	<script src="js/CA/cacell.js"></script>
+	<script src="js/CA/carule.js"></script>
+	<script src="js/CA/caimporter.js"></script>
 	
 	<!-- widgets for page -->
 	<script src="js/widgets/cacrypt.js"></script>
