--- a/editor.html
+++ b/editor.html
@@ -20,6 +20,7 @@
 	<script src="../jsinc/ck-inc/common.js"></script>
 	<script src="../jsinc/ck-inc/debug.js"></script>
 	<script src="../jsinc/ck-inc/converter.js"></script>
+	<script src="../jsinc/ck-inc/sparse.js"></script>
 
 	<!-- cellular automata classes -->
 	<script src="js/CA/catypes.js"></script>
