--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 	<script src="../jsinc/ck-inc/common.js"></script>
 	<script src="../jsinc/ck-inc/debug.js"></script>
 	<script src="../jsinc/ck-inc/converter.js"></script>
+	<script src="../jsinc/ck-inc/sparse.js"></script>
 
 	<!-- cellular automata classes -->
 	<script src="js/CA/catypes.js"></script>
@@ -50,6 +51,7 @@
 	<div id="machine">Loading Machine</div>
 
 	<script >
+	cDebug.on();
 	function onJqueryLoad(){
 		$("#machine").camachine({no_graphs:false});
 	}
