--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 	<!-- widgets for page -->
 	<script src="js/widgets/index/cachart.js"></script>
 	<script src="js/widgets/index/camachine.js"></script>
-	<script src="js/widgets/index/cajson.js"></script>
 	<script src="js/widgets/index/cacontrolsl.js"></script>
 	<script src="js/widgets/index/cacontrolsr.js"></script>
 	<script src="js/widgets/components/cacanvas.js"></script>
+	<script src="js/widgets/components/cajson.js"></script>
 </head>
 <body>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
