widgetified the grid initialise select

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 	<script src="js/widgets/components/cajson.js"></script>
 	<script src="js/widgets/components/caremotecontrol.js"></script>
 	<script src="js/widgets/components/cachart.js"></script>
+	<script src="js/widgets/components/castatus.js"></script>
+	<script src="js/widgets/components/cagridinit.js"></script>
 	<script src="js/widgets/index/camachine.js"></script>
 	<script src="js/widgets/index/cacontrolsl.js"></script>
 	<script src="js/widgets/index/cacontrolsr.js"></script>
