moved ca crypt code into widgets

--- a/crypt.html
+++ b/crypt.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Cellular Automata explorer - editor</title>
+	<title>Cellular Automata Encryption</title>
 	<!-- 3rd party libraries (bean) -->
 	<script  src="../jsinc/extra/bean/bean.js"></script>
 	
@@ -42,6 +42,12 @@
 	}
 	$(onJqueryLoad);
 	</script>
-
+	<p>
+	<div class="ui-widget">
+		<div class="ui-widget-header">Notice</div>
+		<div class="ui-widget-content">
+		cryptography code demonstrated in this application is covered by the UK Govt  <a target="license" href="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/1101784/open-general-export-licence-cryptographic-development.pdf">Open General Export License for Cryptographic development</a>. and is not intended for dual use as defined by this license. You the consumer of this page are entirely responsible for importing this code into your own country. if you disagree please close this page.
+		</div>
+	</div>
 </body>
 </html>
