--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<!--**************************************************************************
+	Copyright (C) Chicken Katsu 2013-2022
+	This code is protected by copyright under the terms of the 
+	Creative Commons Attribution 4.0 International License
+	https://creativecommons.org/licenses/by/4.0/legalcode
+	contact cluck@chickenkatsu.co.uk
+	// USE AT YOUR OWN RISK - NO GUARANTEES OF ANY FORM ARE EITHER EXPRESSED OR IMPLIED
+	**************************************************************************-->
 	<!-- 3rd party libraries (bean) -->
 	<script  src="../jsinc/extra/bean/bean.js"></script>
 	
@@ -57,7 +65,7 @@
 
 	<script >
 	function onJqueryLoad(){
-		$("#machine").camachine({no_graphs:false});
+		$("#machine").camachine();
 	}
 	$(onJqueryLoad);
 	</script>
