--- a/editor.html
+++ b/editor.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<!--**************************************************************************
+	Copyright (C) Chicken Katsu 2013-2022
+	This code is protected by copyright under the terms of the 
+	Creative Commons Attribution 4.0 International License
+	https://creativecommons.org/licenses/by/4.0/legalcode
+	contact cluck@chickenkatsu.co.uk
+	// USE AT YOUR OWN RISK - NO GUARANTEES OF ANY FORM ARE EITHER EXPRESSED OR IMPLIED
+	**************************************************************************-->
+	
 	<title>Cellular Automata explorer - editor</title>
 	<!-- 3rd party libraries (bean) -->
 	<script  src="../jsinc/extra/bean/bean.js"></script>
