started on scrambler

--- a/crypt.html
+++ b/crypt.html
@@ -47,6 +47,7 @@
 	<script src="js/CA/cagrid.js"></script>
 	<script src="js/CA/cagridimporter.js"></script>
 	<script src="js/CA/caimporter.js"></script>
+	<script src="js/CA/cascrambler.js"></script>
 	
 	<!-- widgets for page -->
 	<script src="js/widgets/components/cacanvas.js"></script>
