--- a/crypt.html
+++ b/crypt.html
@@ -72,7 +72,17 @@
 	<div class="ui-widget">
 		<div class="ui-widget-header">Notice</div>
 		<div class="ui-widget-content">
-		cryptography code demonstrated in this application is covered by the UK Govt  <a target="license" href="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/1101784/open-general-export-licence-cryptographic-development.pdf">Open General Export License for Cryptographic development</a>. and is not intended for dual use as defined by this license. You the consumer of this page are entirely responsible for importing this code into your own country. if you disagree please close this page.
+			<p>
+				cryptography code demonstrated in this application is covered by the UK Govt  
+				<a target="license" href="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/1101784/open-general-export-licence-cryptographic-development.pdf">Open General Export License for Cryptographic development</a>.
+				and is not intended for dual use as defined by this license. 
+				You the consumer of this page are entirely responsible for importing this code into your own country. 
+				if you disagree please close this page.
+			</p>
+			<p>
+				to generate Json to import please use the <a target="CAsim" href="index.html">CA simulator</a>
+
+			</p>
 		</div>
 	</div>
 </body>
