--- a/index.html
+++ b/index.html
@@ -2,18 +2,20 @@
 <html>
 <head>
 	<!--**************************************************************************
-	Copyright (C) Chicken Katsu 2013-2022
-	This code is protected by copyright under the terms of the 
-	Creative Commons Attribution 4.0 International License
-	https://creativecommons.org/licenses/by/4.0/legalcode
-	contact cluck@chickenkatsu.co.uk
-	// USE AT YOUR OWN RISK - NO GUARANTEES OF ANY FORM ARE EITHER EXPRESSED OR IMPLIED
+	Cellular Automata Simulator © 2013 by open768 
+	is licensed under Attribution-NonCommercial-ShareAlike 4.0 International. 
+	To view a copy of this license, visit http://creativecommons.org/licenses/by-nc-sa/4.0/
+	contact: https://github.com/open768/
+
+	For licenses that allow for commercial use please contact cluck@chickenkatsu.co.uk
+
+	USE AT YOUR OWN RISK - NO GUARANTEES OF ANY FORM ARE EITHER EXPRESSED OR IMPLIED
 	**************************************************************************-->
 	<!-- 3rd party libraries (bean) -->
 	<script  src="../jsinc/extra/bean/bean.js"></script>
 	
 	<!-- 3rd party libraries (jquery) -->
-	<script  src="../jsinc/extra/jquery/jquery-3.2.1.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
 	<script  src="../jsinc/extra/jquery-ui/jquery-ui.min.js"></script>
 	<script  src="../jsinc/extra/jquery-cookie/jquery.cookie.js"></script>
 	<script  src="../jsinc/extra/jquery-canvas/jcanvas.min.js"></script>
