moved test code

--- a/test/test-boredom.html
+++ b/test/test-boredom.html
@@ -26,11 +26,11 @@
 	<script src="../js/CA/cagrid.js"></script>
 	<script src="../js/CA/carule.js"></script>
 	<script src="../js/CA/caimporter.js"></script>
+	<script src="test-boredom.js"></script>
 </head>
 <body>
     <script>
-        document.write("testing...")
-        cCaRule.test_boredom()
+		cCATestBoredom.test()
     </script>
 </body>
 </html>
