--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 	<script src="js/CA/cacell.js"></script>
 	<script src="js/CA/carule.js"></script>
 	<script src="js/CA/cagrid.js"></script>
+	<script src="js/CA/cagridinit.js"></script>
 	<script src="js/CA/cagridimporter.js"></script>
 	<script src="js/CA/caimporter.js"></script>
 	<script src="js/CA/calexicon.js"></script>
