moved even code to separate class

--- a/editor.html
+++ b/editor.html
@@ -19,6 +19,8 @@
 	<script  src="../jsinc/extra/jquery-ui/jquery-ui.min.js"></script>
 	<script  src="../jsinc/extra/jquery-cookie/jquery.cookie.js"></script>
 	<script  src="../jsinc/extra/jquery-canvas/jcanvas.min.js"></script>
+	
+	<!-- 3rd party libraries (google visualisation) -->
 	<script  src="https://www.gstatic.com/charts/loader.js"></script>
 	
 	<!-- stylesheets -->
@@ -33,6 +35,7 @@
 
 	<!-- cellular automata classes -->
 	<script src="js/CA/catypes.js"></script>
+	<script src="js/CA/caevent.js"></script>
 	<script src="js/CA/cacell.js"></script>
 	<script src="js/CA/carule.js"></script>
 	<script src="js/CA/caimporter.js"></script>
