--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 
 	<!-- cellular automata classes -->
 	<script src="js/CA/catypes.js"></script>
+	<script src="js/CA/caevent.js"></script>
 	<script src="js/CA/cacell.js"></script>
 	<script src="js/CA/carule.js"></script>
 	<script src="js/CA/cagrid.js"></script>
