--- a/editor.html
+++ b/editor.html
@@ -39,7 +39,8 @@
 	<script src="js/CA/cacell.js"></script>
 	<script src="js/CA/carule.js"></script>
 	<script src="js/CA/caimporter.js"></script>
-	
+	<script src="js/CA/caindex.js"></script>
+		
 	<!-- widgets for page -->
 	<script src="js/widgets/caeditor.js"></script>
 </head>
