--- a/crypt.html
+++ b/crypt.html
@@ -45,6 +45,7 @@
 	<script src="js/CA/caevent.js"></script>
 	<script src="js/CA/cacell.js"></script>
 	<script src="js/CA/carule.js"></script>
+	<script src="js/CA/caindex.js"></script>
 	<script src="js/CA/cagrid.js"></script>
 	<script src="js/CA/cagridinit.js"></script>
 	<script src="js/CA/cagridimporter.js"></script>
