all events now take a grid name - so only events for a particular grid are received by widgets

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 	<script >
 	function onJqueryLoad(){
-		$("#machine").camachine();
+		$("#machine").camachine({name:"caexplore"});
 	}
 	$(onJqueryLoad);
 	</script>
