--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
 	USE AT YOUR OWN RISK - NO GUARANTEES OF ANY FORM ARE EITHER EXPRESSED OR IMPLIED
 	**************************************************************************-->
+	<!-- 3rd party libraries (w3c) -->
+	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+	
 	<!-- 3rd party libraries (bean) -->
 	<script  src="../jsinc/extra/bean/bean.js"></script>
 	
