using # functions, added repeat pattern detection

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 	<script  src="../jsinc/extra/jquery-ui/jquery-ui.min.js"></script>
 	<script  src="../jsinc/extra/jquery-cookie/jquery.cookie.js"></script>
 	<script  src="../jsinc/extra/jquery-canvas/jcanvas.min.js"></script>
+	<script  src="../jsinc/extra/js-md5/md5.min.js"></script>
 	<script  src="https://www.gstatic.com/charts/loader.js"></script>
 	
 	<!-- stylesheets -->
