moved editor class

--- a/editor.html
+++ b/editor.html
@@ -42,7 +42,7 @@
 	<script src="js/CA/caindex.js"></script>
 		
 	<!-- widgets for page -->
-	<script src="js/widgets/caeditor.js"></script>
+	<script src="js/widgets/editor/caeditor.js"></script>
 </head>
 <body>
 	<h2>Cellular Automata JS Editor</h2>
