--- a/crypt.html
+++ b/crypt.html
@@ -41,6 +41,7 @@
 	<script src="../jsinc/ck-inc/sparse.js"></script>
 
 	<!-- cellular automata classes -->
+	<script src="js/CA/caevents.js"></script>
 	<script src="js/CA/catypes.js"></script>
 	<script src="js/CA/cacell.js"></script>
 	<script src="js/CA/carule.js"></script>
