--- a/crypt.html
+++ b/crypt.html
@@ -43,6 +43,9 @@
 	<!-- cellular automata classes -->
 	<script src="js/CA/catypes.js"></script>
 	<script src="js/CA/caevent.js"></script>
+	<script src="js/CA/crypt/cacrypttypes.js" /></script>
+	<script src="js/CA/crypt/cacryptevent.js"></script>
+	<script src="js/CA/caevent.js"></script>
 	<script src="js/CA/cacell.js"></script>
 	<script src="js/CA/carule.js"></script>
 	<script src="js/CA/caindex.js"></script>
