--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 	<div id="machine">Loading Machine</div>
 
 	<script >
-		cDebug.on(cDebugTypes.levels.extra)		//turn on debugging
+		//cDebug.on(cDebugTypes.levels.extra)		//turn on debugging
 		function onJqueryLoad(){
 			$("#machine").camachine({name:"caexplore"});
 		}
