--- a/index.html
+++ b/index.html
@@ -90,7 +90,12 @@
 	</script>
 
 	<DIV id="infopanel" style="display:none"><ul>
-		<li>for the editor, copy the rule into the clipboard and <a target=editor href="editor.html">Click here</a>
+		<li>for the following ... copy the rule into the clipboard and
+			<ul>
+				<li>for the editor <a target=editor href="editor.html">Click here</a></li>
+				<li>for the scrambler <a target=editor href="scrambler.html">Click here</a></li>
+				<li>for the encryptor <a target=editor href="encrypt.html">Click here</a></li>
+			</ul> 
 		<li>for documentation see <a href="https://docs.google.com/document/d/1Cfn2wzHjWAyRCol7YzSSda7y-o4xKYcIUZwRrdAyHtc/edit?usp=sharing" target="_new">this document</a>
 		<li>we're on <a href="https://github.com/open768/CA">Github</a>
 		<li>for more CA rules see <a target="mcell" href="http://psoup.math.wisc.edu/mcell/ca_rules.html">http://psoup.math.wisc.edu/mcell/ca_rules.html</a>
