placeholder for scrambler

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 			<ul>
 				<li>for the editor <a target=editor href="editor.html">Click here</a></li>
 				<li>for the scrambler <a target=editor href="scrambler.html">Click here</a></li>
-				<li>for the encryptor <a target=editor href="encrypt.html">Click here</a></li>
+				<li>for the encryptor <a target=editor href="crypt.html">Click here</a></li>
 			</ul> 
 		<li>for documentation see <a href="https://docs.google.com/document/d/1Cfn2wzHjWAyRCol7YzSSda7y-o4xKYcIUZwRrdAyHtc/edit?usp=sharing" target="_new">this document</a>
 		<li>we're on <a href="https://github.com/open768/CA">Github</a>
