--- a/index.html
+++ b/index.html
@@ -15,22 +15,22 @@
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	
 	<!-- 3rd party libraries (bean) -->
-	<script  src="../jsinc/extra/bean/bean.js"></script>
+	<script  src="https://cdnjs.cloudflare.com/ajax/libs/bean/1.0.15/bean.min.js"></script>
 	
 	<!-- 3rd party libraries (jquery) -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-	<script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js"
-		integrity="sha256-lSjKY0/srUM9BE3dPm+c4fBo1dky2v27Gdjm2uoZaL0=" crossorigin="anonymous"></script>
-	<script  src="../jsinc/extra/jquery-cookie/jquery.cookie.js"></script>
-	<script  src="../jsinc/extra/jquery-canvas/jcanvas.min.js"></script>
-	<script  src="../jsinc/extra/js-md5/md5.min.js"></script>
+	<script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js"></script>
+	<script  src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
+	<script  src="https://cdnjs.cloudflare.com/ajax/libs/jcanvas/23.0.0/umd/jcanvas.min.js"></script>
+	<script  src="https://cdn.jsdelivr.net/npm/js-md5@0.8.3/build/md5.min.js"></script>
 	<script  src="https://www.gstatic.com/charts/loader.js"></script>
 	
 	<!-- stylesheets -->
 	<link rel="stylesheet" href="css/CA.css">
-	<link rel="stylesheet" href="css/jquery/jquery-ui.css">
+	<link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
 
 	<!-- my useful functions -->
+	<script src="../jsinc/ck-inc/jquery/jquery.common.js"></script>
 	<script src="../jsinc/ck-inc/common.js"></script>
 	<script src="../jsinc/ck-inc/debug.js"></script>
 	<script src="../jsinc/ck-inc/converter.js"></script>
