--- a/test/test-boredom.html
+++ b/test/test-boredom.html
@@ -12,9 +12,12 @@
 	USE AT YOUR OWN RISK - NO GUARANTEES OF ANY FORM ARE EITHER EXPRESSED OR IMPLIED
 	**************************************************************************-->
 	<!-- 3rd party libraries (bean) -->
-	<script  src="../../jsinc/extra/bean/bean.js"></script>
+	<script  src="https://cdnjs.cloudflare.com/ajax/libs/bean/1.0.15/bean.min.js"></script>
+	<!-- 3rd party libraries (md5) -->
+	<script  src="https://cdn.jsdelivr.net/npm/js-md5@0.8.3/build/md5.min.js"></script>
 	
 	<!-- my useful functions -->
+	<script src="../../jsinc/ck-inc/jquery/jquery.common.js"></script>
 	<script src="../../jsinc/ck-inc/common.js"></script>
 	<script src="../../jsinc/ck-inc/debug.js"></script>
 	<script src="../../jsinc/ck-inc/converter.js"></script>
