--- a/scramble.html
+++ b/scramble.html
@@ -20,21 +20,23 @@
 
 	<title>Cellular Automata Encryption</title>
 	<!-- 3rd party libraries (bean) -->
-	<script  src="../jsinc/extra/bean/bean.js"></script>
+	<script  src="https://cdnjs.cloudflare.com/ajax/libs/bean/1.0.15/bean.min.js"></script>
 	
 	<!-- 3rd party libraries (jquery) -->
-	<script  src="../jsinc/extra/jquery/jquery-3.2.1.min.js"></script>
-	<script  src="../jsinc/extra/jquery-ui/jquery-ui.min.js"></script>
-	<script  src="../jsinc/extra/jquery-cookie/jquery.cookie.js"></script>
-	<script  src="../jsinc/extra/jquery-canvas/jcanvas.min.js"></script>
+	<script  src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script  src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+	<script  src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
+	<script  src="https://cdnjs.cloudflare.com/ajax/libs/jcanvas/23.0.0/umd/jcanvas.min.js"></script>
+	<script  src="https://cdn.jsdelivr.net/npm/js-md5@0.8.3/build/md5.min.js"></script>
 	<script  src="https://www.gstatic.com/charts/loader.js"></script>
 	
 	<!-- stylesheets -->
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">	
 	<link rel="stylesheet" href="css/CA.css">
-	<link rel="stylesheet" href="css/jquery/jquery-ui.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css">
 
 	<!-- my useful functions -->
+	<script src="../jsinc/ck-inc/jquery/jquery.common.js"></script>
 	<script src="../jsinc/ck-inc/common.js"></script>
 	<script src="../jsinc/ck-inc/debug.js"></script>
 	<script src="../jsinc/ck-inc/converter.js"></script>
